# device_trust_shim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: DeviceTrustShimConfig.cmake.in
docs/: INTEGRATION_GUIDE.md
examples/: building_automation_example.cpp  clinical_trial_adapter_example.cpp  dicom_adapter_example.cpp  industrial_adapter_example.cpp  infusion_pump_example.cpp  radiology_device_example.cpp
include/dts/: audit_chain.hpp
include/dts/adapters/: building_automation_adapter.hpp  clinical_trial_adapter.hpp  dicom_adapter.hpp  industrial_adapter.hpp  medtech_adapter.hpp
tests/: test_audit_chain.cpp
